[package]
name = "isotp-rs"
version = "0.1.7"
edition = "2021"
authors = ["zhuyu <zhuyu4839@gmail.com>"]
license = "GPL-3.0"
description = "ISO-TP trait define."
homepage = "https://github.com/zhuyu4839/isotp-rs"
repository = "https://github.com/zhuyu4839/isotp-rs"

[dependencies]
bitflags = "2"
thiserror = "1"
log = "0"

[dev-dependencies]
anyhow = "1"
hex-literal = "0.4"

[features]
default = ["std2004"]

std2004 = []
std2016 = []
can-fd = []
